--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.3.3",
+    "@prisma/client": "^6.16.2",
     "dotenv": "^16.3.1",
     "hono": "^3.10.4",
     "openai": "^4.20.1",
+    "pg": "^8.16.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/pg": "^8",
+    "prisma": "^6.16.2",
     "tsx": "^4.6.0",
     "typescript": "^5.4.2",
     "vitest": "^3.1.3"
